--- a/app/pom.xml
+++ b/app/pom.xml
@@ -1,42 +1,64 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
-<modelVersion>4.0.0</modelVersion>
-<parent>
-<groupId>org.springframework.boot</groupId>
-<artifactId>spring-boot-starter-parent</artifactId>
-<version>2.5.4</version>
-<relativePath/> <!-- lookup parent from repository -->
-</parent>
-<groupId>com.example</groupId>
-<artifactId>demo</artifactId>
-<version>0.0.1-SNAPSHOT</version>
-<name>demo</name>
-<description>Demo project for Spring Boot</description>
+[12:18] Gerald Oswaldo Ortiz Candela
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+
+    <modelVersion>4.0.0</modelVersion>
  
-  <properties>
-<java.version>11</java.version>
-</properties>
+    <groupId>com.example</groupId>
+
+    <artifactId>hello-world</artifactId>
+
+    <version>1.0-SNAPSHOT</version>
  
-  <dependencies>
-<dependency>
-<groupId>org.springframework.boot</groupId>
-<artifactId>spring-boot-starter-web</artifactId>
-</dependency>
+    <properties>
+
+        <maven.compiler.source>11</maven.compiler.source>
+
+        <maven.compiler.target>11</maven.compiler.target>
+
+    </properties>
  
-    <dependency>
-<groupId>org.springframework.boot</groupId>
-<artifactId>spring-boot-starter-test</artifactId>
-<scope>test</scope>
-</dependency>
-</dependencies>
+    <dependencies>
+
+        <!-- Tus dependencias aquí -->
+
+    </dependencies>
  
-  <build>
-<plugins>
-<plugin>
-<groupId>org.springframework.boot</groupId>
-<artifactId>spring-boot-maven-plugin</artifactId>
-</plugin>
-</plugins>
-</build>
- 
+    <build>
+
+        <plugins>
+
+            <plugin>
+
+                <groupId>org.apache.maven.plugins</groupId>
+
+                <artifactId>maven-jar-plugin</artifactId>
+
+                <version>3.2.0</version>
+
+                <configuration>
+
+                    <archive>
+
+                        <manifest>
+
+                            <addClasspath>true</addClasspath>
+
+                            <mainClass>com.example.demo.DemoApplication</mainClass>  <!-- Reemplaza con tu clase principal -->
+
+                        </manifest>
+
+                    </archive>
+
+                </configuration>
+
+            </plugin>
+
+        </plugins>
+
+    </build>
+
 </project>
