--- a/app/pom.xml
+++ b/app/pom.xml
@@ -23,7 +23,11 @@
  
     <dependencies>
 
-        <!-- Tus dependencias aquí -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+            <version>2.5.4</version>
+        </dependency>
 
     </dependencies>
  
