--- a/app/pom.xml
+++ b/app/pom.xml
@@ -36,6 +36,11 @@
         <plugins>
 
             <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+
+            <plugin>
 
                 <groupId>org.apache.maven.plugins</groupId>
 
