--- a/.github/workflows/deployment.yaml
+++ b/.github/workflows/deployment.yaml
@@ -14,31 +14,46 @@ jobs:
       - name: Descargar Repositorio
         uses: actions/checkout@v4
 
-      # - name: Cache Dependencies
-      #   uses: actions/cache@v4
-      #   id: cache-node-modules
-      #   with:
-      #     path: 'app/node_modules'
-      #     key: ${{ runner.os }}-node_modules-${{ hashFiles('app/package*.json') }}-${{ hashFiles('.github/workflows/node.yml') }}
-
-
-      # - name: Use Node.js 18.x
-      #   uses: actions/setup-node@v4
-      #   with:
-      #     node-version: 18.x
-
-      # - name: Install dependencies
-      #   if: steps.cache-node-modules.outputs.cache-hit != 'true'
-      #   run: npm install
-      #   working-directory: ./app
-
-      - uses: azure/docker-login@v1
+      - name: Set up JDK 17
+        uses: actions/setup-java@v4
         with:
-          login-server: ${{ vars.REGISTRY_SERVER }}
-          username: ${{ secrets.REGISTRY_USERNAME }}
-          password: ${{ secrets.REGISTRY_PASSWORD }}
+          distribution: 'temurin'
+          java-version: '17'
 
-      # - name: Build and push Docker image
-      #   run: |
-      #     docker build . -t ${{ vars.REGISTRY_SERVER }}/adventure:latest
-      #     docker push ${{ vars.REGISTRY_SERVER }}/adventure:latest
+      - name: Setup Maven Action
+        uses: s4u/setup-maven-action@3.9.6
+
+      - run: |
+          mvn --version
+          java --version
+
+
+
+      # # - name: Cache Dependencies
+      # #   uses: actions/cache@v4
+      # #   id: cache-node-modules
+      # #   with:
+      # #     path: 'app/node_modules'
+      # #     key: ${{ runner.os }}-node_modules-${{ hashFiles('app/package*.json') }}-${{ hashFiles('.github/workflows/node.yml') }}
+
+
+      # # - name: Use Node.js 18.x
+      # #   uses: actions/setup-node@v4
+      # #   with:
+      # #     node-version: 18.x
+
+      # # - name: Install dependencies
+      # #   if: steps.cache-node-modules.outputs.cache-hit != 'true'
+      # #   run: npm install
+      # #   working-directory: ./app
+
+      # - uses: azure/docker-login@v1
+      #   with:
+      #     login-server: ${{ vars.REGISTRY_SERVER }}
+      #     username: ${{ secrets.REGISTRY_USERNAME }}
+      #     password: ${{ secrets.REGISTRY_PASSWORD }}
+
+      # # - name: Build and push Docker image
+      # #   run: |
+      # #     docker build . -t ${{ vars.REGISTRY_SERVER }}/adventure:latest
+      # #     docker push ${{ vars.REGISTRY_SERVER }}/adventure:latest
