--- a/.github/workflows/deployment.yaml
+++ b/.github/workflows/deployment.yaml
@@ -4,6 +4,11 @@ on:
 jobs:
   run:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        maven: [ '3.9.6' ]
+        java: ['17']
+
     environment: dev
     defaults:
       run:
@@ -14,18 +19,31 @@ jobs:
       - name: Descargar Repositorio
         uses: actions/checkout@v4
 
-      - name: Set up JDK 17
-        uses: actions/setup-java@v4
-        with:
-          distribution: 'temurin'
-          java-version: '17'
 
       - name: Setup Maven Action
-        uses: s4u/setup-maven-action@3.9.6
-
-      - run: |
+        uses: s4u/setup-maven-action@v1.2.1
+        with:
+          java-version: ${{ matrix.java }}
+          maven-version: ${{ matrix.maven }}
+      - name: Build with Maven
+        run: |
           mvn --version
           java --version
+
+
+
+      # - name: Set up JDK 17
+      #   uses: actions/setup-java@v4
+      #   with:
+      #     distribution: 'temurin'
+      #     java-version: '17'
+
+      # - name: Setup Maven Action
+      #   uses: s4u/setup-maven-action@1.13.0
+
+      # - run: |
+      #     mvn --version
+      #     java --version
 
 
 
