--- a/.github/workflows/deployment.yaml
+++ b/.github/workflows/deployment.yaml
@@ -4,6 +4,7 @@ on:
 jobs:
   run:
     runs-on: ubuntu-latest
+
     strategy:
       matrix:
         maven: [ '3.9.6' ]
@@ -25,53 +26,24 @@ jobs:
         with:
           java-version: ${{ matrix.java }}
           maven-version: ${{ matrix.maven }}
-      - name: Build with Maven
+
+      - name: Validate java and maven version
         run: |
           mvn --version
           java --version
 
+      - name: Build with Maven
+        run: mvn clean package
+        working-directory: ./demo
 
+      - uses: azure/docker-login@v1
+        with:
+          login-server: ${{ vars.REGISTRY_SERVER }}
+          username: ${{ secrets.REGISTRY_USERNAME }}
+          password: ${{ secrets.REGISTRY_PASSWORD }}
 
-      # - name: Set up JDK 17
-      #   uses: actions/setup-java@v4
-      #   with:
-      #     distribution: 'temurin'
-      #     java-version: '17'
+      - name: Build and push Docker image
+        run: |
+          docker build . -t ${{ vars.REGISTRY_SERVER }}/java:latest
+          docker push ${{ vars.REGISTRY_SERVER }}/adventure:latest
 
-      # - name: Setup Maven Action
-      #   uses: s4u/setup-maven-action@1.13.0
-
-      # - run: |
-      #     mvn --version
-      #     java --version
-
-
-
-      # # - name: Cache Dependencies
-      # #   uses: actions/cache@v4
-      # #   id: cache-node-modules
-      # #   with:
-      # #     path: 'app/node_modules'
-      # #     key: ${{ runner.os }}-node_modules-${{ hashFiles('app/package*.json') }}-${{ hashFiles('.github/workflows/node.yml') }}
-
-
-      # # - name: Use Node.js 18.x
-      # #   uses: actions/setup-node@v4
-      # #   with:
-      # #     node-version: 18.x
-
-      # # - name: Install dependencies
-      # #   if: steps.cache-node-modules.outputs.cache-hit != 'true'
-      # #   run: npm install
-      # #   working-directory: ./app
-
-      # - uses: azure/docker-login@v1
-      #   with:
-      #     login-server: ${{ vars.REGISTRY_SERVER }}
-      #     username: ${{ secrets.REGISTRY_USERNAME }}
-      #     password: ${{ secrets.REGISTRY_PASSWORD }}
-
-      # # - name: Build and push Docker image
-      # #   run: |
-      # #     docker build . -t ${{ vars.REGISTRY_SERVER }}/adventure:latest
-      # #     docker push ${{ vars.REGISTRY_SERVER }}/adventure:latest
