--- a/.github/workflows/deployment.yaml
+++ b/.github/workflows/deployment.yaml
@@ -45,5 +45,5 @@ jobs:
       - name: Build and push Docker image
         run: |
           docker build . -t ${{ vars.REGISTRY_SERVER }}/java:latest
-          docker push ${{ vars.REGISTRY_SERVER }}/adventure:latest
+          docker push ${{ vars.REGISTRY_SERVER }}/java:latest
 
